# socketeer

./: Cargo.toml  README.md
src/: db.rs  emitter.rs  main.rs  rest.rs  utils.rs  ws.rs
src/models/: mod.rs  rooms.rs  users.rs
tests/: pyproject.toml
tests/unit/: test_connect.py
